# Robotics-rover

./: controller bridge.txt
robot_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
robot_ws/install/robot_simulation/lib/robot_simulation/: robot_monitor.py  teleop_keyboard.py
robot_ws/install/robot_simulation/local/lib/python3.10/dist-packages/robot_simulation/: __init__.py
robot_ws/install/robot_simulation/local/lib/python3.10/dist-packages/robot_simulation-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  top_level.txt
robot_ws/install/robot_simulation/share/ament_index/resource_index/package_run_dependencies/: robot_simulation
robot_ws/install/robot_simulation/share/ament_index/resource_index/parent_prefix_path/: robot_simulation
robot_ws/install/robot_simulation/share/robot_simulation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
robot_ws/install/robot_simulation/share/robot_simulation/cmake/: robot_simulationConfig-version.cmake  robot_simulationConfig.cmake
robot_ws/install/robot_simulation/share/robot_simulation/config/: bridge_config.yaml  robot_params.yaml
robot_ws/install/robot_simulation/share/robot_simulation/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
robot_ws/install/robot_simulation/share/robot_simulation/launch/: bridge_only.launch.py  robot_simulation.launch.py  robot_spawn.launch.py
robot_ws/install/robot_simulation/share/robot_simulation/models/robot/: model.config  model.sdf
robot_ws/install/robot_simulation/share/robot_simulation/worlds/: test_world.sdf
robot_ws/log/: latest_build
robot_ws/src/robot_simulation/: CMakeLists.txt  README.md  package.xml  setup.py
robot_ws/src/robot_simulation/config/: bridge_config.yaml  ekf_config.yaml  laser_merge_config.yaml  robot_params.yaml  slam_config.yaml  slam_rviz.rviz
robot_ws/src/robot_simulation/launch/: bridge_only.launch.py  robot_simulation.launch.py  robot_spawn.launch.py  robot_working.launch.py  slam.launch.py  slam_simple.launch.py
robot_ws/src/robot_simulation/models/robot/: model.sdf
robot_ws/src/robot_simulation/robot_simulation/: __init__.py
robot_ws/src/robot_simulation/scripts/: robot_monitor.py  teleop_keyboard.py
robot_ws/src/robot_simulation/worlds/: test_world.sdf
