<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_simulation</name>
  <version>0.0.0</version>
  <description>Robot simulation package with dual LiDAR and camera</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS 2 Core Dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  
  <!-- Robot State Management -->
  <build_depend>robot_state_publisher</build_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Gazebo and Bridge Dependencies -->
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>

  <!-- Message Dependencies -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Launch Dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Teleop Dependencies -->
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>

  <!-- SLAM Dependencies -->
  <exec_depend>slam_toolbox</exec_depend>

  <!-- Test Dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
